--- a/src.qrc
+++ b/src.qrc
@@ -1,7 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>maze1.png</file>
-        <file>maze2(1).png</file>
+        <file>maze2.png</file>
         <file>maze3.png</file>
         <file>worldmap4.png</file>
     </qresource>
